--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -17,10 +17,10 @@
 "acceleration x" = "Beschleunigung x";
 
 /* No comment provided by engineer. */
-"acceleration y" = "Beschleunigung_y";
+"acceleration y" = "Beschleunigung y";
 
 /* No comment provided by engineer. */
-"acceleration z" = "Beschleunigung_z";
+"acceleration z" = "Beschleunigung z";
 
 /* No comment provided by engineer. */
 "acceleration-sensor" = "Beschleunigungssensor";
@@ -48,6 +48,9 @@
 
 /* No comment provided by engineer. */
 "Agree" = "Zustimmen";
+
+/* No comment provided by engineer. */
+"all around" = "rundherum";
 
 /* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Alle Bluetooth-Verbindungen wurden getrennt";
@@ -83,6 +86,9 @@
 "and" = "und";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "und speichere das Eingegebene in";
+
+/* No comment provided by engineer. */
 "and wait" = "und warte";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino Bausteine";
+
+/* No comment provided by engineer. */
+"Ask " = "Frage ";
 
 /* No comment provided by engineer. */
 "at " = "bei ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "Ändere Größe um";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Auf Querformat wechseln";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Auf Hochformat wechseln";
 
 /* No comment provided by engineer. */
 "Change transparency " = "Ändere Transparenz ";
@@ -458,6 +473,9 @@
 "Do you want to save the changes" = "Willst du die Änderungen speichern";
 
 /* No comment provided by engineer. */
+"don't rotate" = "nicht drehen";
+
+/* No comment provided by engineer. */
 "Done" = "Fertig";
 
 /* No comment provided by engineer. */
@@ -686,7 +704,7 @@
 "Go to" = "Gehe zu";
 
 /* No comment provided by engineer. */
-"Go to front" = "Komme nach vorn";
+"Go to front" = "Gehe nach vorne";
 
 /* paint */
 "Green" = "Grün";
@@ -821,7 +839,10 @@
 "LED" = "LED";
 
 /* No comment provided by engineer. */
-"Left" = "Fliege links";
+"Left" = "Links";
+
+/* No comment provided by engineer. */
+"left-right only" = "links-rechts";
 
 /* No comment provided by engineer. */
 "Length" = "Länge";
@@ -1163,6 +1184,9 @@
 "Place at " = "Setze an Position ";
 
 /* No comment provided by engineer. */
+"Play" = "Spielen";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
@@ -1226,7 +1250,7 @@
 "Pointer" = "Zeiger";
 
 /* No comment provided by engineer. */
-"position x" = "Position_x";
+"position x" = "Position x";
 
 /* No comment provided by engineer. */
 "position y" = "Position y";
@@ -1331,7 +1355,7 @@
 "Result" = "Ergebnis";
 
 /* No comment provided by engineer. */
-"Right" = "Fliege rechts";
+"Right" = "Rechts";
 
 /* paint */
 "Rotate" = "Drehen";
@@ -1451,6 +1475,9 @@
 "Set Phiro light" = "Setze Phiro Licht";
 
 /* No comment provided by engineer. */
+"Set rotation style" = "Setze Rotations-Stil";
+
+/* No comment provided by engineer. */
 "Set size to" = "Setze Größe auf";
 
 /* No comment provided by engineer. */
@@ -1523,7 +1550,7 @@
 "stage touch x" = "Bildschirm berührt x";
 
 /* No comment provided by engineer. */
-"stage touch y" = "bildschirm_berührt_y";
+"stage touch y" = "Bildschirm berührt y";
 
 /* paint */
 "Stamp" = "Stempel";
@@ -1643,10 +1670,10 @@
 "TI" = "TI";
 
 /* No comment provided by engineer. */
-"time" = "time";
+"time" = "mal";
 
 /* No comment provided by engineer. */
-"times" = "times";
+"times" = "mal";
 
 /* No comment provided by engineer. */
 "to" = "auf";
@@ -1811,13 +1838,16 @@
 "Welcome!" = "Willkommen!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "Wie heißt du?";
+
+/* No comment provided by engineer. */
 "When" = "Wenn";
 
 /* No comment provided by engineer. */
 "When background changes to" = "Wenn der Hintergrund wechselt zu";
 
 /* No comment provided by engineer. */
-"When project starts" = "Wenn Projekt gestartet";
+"When project starts" = "Wenn Projekt startet";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Wenn der Bildschirm berührt wird";
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "Du hast dieses Projekt bereits heruntergeladen!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Deine Antwort";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Deine E-Mail Adresse scheint ungültig zu sein";
