--- a/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "موافق";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "جميع أجهزة Bluetooth التي تم قطع الاتصال بنجاح";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "و";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "والانتظار";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "لبّنات برمجية لـ اردوينو";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "في ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "تغيير الحجم بمقدار";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "تغيير درجة الشفافية ";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "هل تريد حفظ التغييرات";
+
+/* No comment provided by engineer. */
+"don't rotate" = "لا تدور";
 
 /* No comment provided by engineer. */
 "Done" = "موافق";
@@ -824,6 +842,9 @@
 "Left" = "اليسار";
 
 /* No comment provided by engineer. */
+"left-right only" = "من اليسار-اليمين فقط";
+
+/* No comment provided by engineer. */
 "Length" = "طول";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "تحديد موقع الكائن في ";
 
 /* No comment provided by engineer. */
+"Play" = "تشغيل";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "تشغيل موسيقى روبوت الاطفال\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "تعيين ضوء روبوت الاطفال";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "تعيين نمط الاستدارة الى ";
 
 /* No comment provided by engineer. */
 "Set size to" = "تعيين الحجم الى";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "مرحبا!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "ما هو اسمك؟";
+
+/* No comment provided by engineer. */
 "When" = "عندما";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "You have already downloaded this project!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "البريد الالكتروني الخاص بك غير صحيح";
