--- a/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "একমত";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "সমস্ত ব্লোটুথ ডিভাইস সফলভাবে সংযোগ বিচ্ছিন্ন হয়েছে";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "এবং";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "এবং অপেক্ষা করুন";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "আরডুইনো এক্সটেনশন";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "সম্পর্কে";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "আকার পরিবর্তন করুন";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "স্বচ্ছতা পরিবর্তন করুন";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "আপনি কি পরিবর্তনগুলি সংরক্ষণ করতে চান?";
+
+/* No comment provided by engineer. */
+"don't rotate" = "ঘোরাবেন না";
 
 /* No comment provided by engineer. */
 "Done" = "করা হয়েছে";
@@ -824,6 +842,9 @@
 "Left" = "বাম দিক";
 
 /* No comment provided by engineer. */
+"left-right only" = "শুধুমাত্র বাম-ডান";
+
+/* No comment provided by engineer. */
 "Length" = "দৈর্ঘ্য";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "এ স্থান";
 
 /* No comment provided by engineer. */
+"Play" = "খেলুন";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "ফিরো সংগীত বাজান";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "ফিরো আলো সেট করুন";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "ঘূর্ণন ধরন সেট করুন";
 
 /* No comment provided by engineer. */
 "Set size to" = "আকার সেট করুন";
@@ -1811,13 +1838,16 @@
 "Welcome!" = "স্বাগতম";
 
 /* No comment provided by engineer. */
+"What's your name?" = "তোমার নাম কি?";
+
+/* No comment provided by engineer. */
 "When" = "কখন";
 
 /* No comment provided by engineer. */
 "When background changes to" = "যখন ব্যাকগ্রাউন্ডে পরিবর্তন হয়";
 
 /* No comment provided by engineer. */
-"When project starts" = "যখন প্রজেক্ট শুরু";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "যখন পর্যায়টি টেপ করা হয়";
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "আপনি ইতিমধ্যে এই প্রজেক্টটি ডাউনলোড করেছেন!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "আপনার ইমেলটি অবৈধ বলে মনে হচ্ছে";
