--- a/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "Souhlasím";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Všechna Bluetooth zařízení úspěšně odpojena";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "a";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "a počkat";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino bloky";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "na ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "Změnit velikost o";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "Změnit průhlednost ";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "Chcete uložit změny";
+
+/* No comment provided by engineer. */
+"don't rotate" = "Neotáčet";
 
 /* No comment provided by engineer. */
 "Done" = "Hotovo";
@@ -824,6 +842,9 @@
 "Left" = "Nalevo";
 
 /* No comment provided by engineer. */
+"left-right only" = "zleva doprava";
+
+/* No comment provided by engineer. */
 "Length" = "Délka";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "Umístěte na ";
 
 /* No comment provided by engineer. */
+"Play" = "Přehrát";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Přehrávat hudbu Phiro ";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Nastavit Phiro světla";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "Nastavit styl otáčení";
 
 /* No comment provided by engineer. */
 "Set size to" = "Nastavit velikost na";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "Vítej!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "Jak se jmenuješ?";
+
+/* No comment provided by engineer. */
 "When" = "Když";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "You have already downloaded this project!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Your email seems to be invalid";
