--- a/src/Catty/Resources/Localization/ja.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ja.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "同意する";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "かつ";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "待つ";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino ブロック";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "位置 ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "サイズを変更：";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "透明度を変更：";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "Do you want to save the changes";
+
+/* No comment provided by engineer. */
+"don't rotate" = "回転しない";
 
 /* No comment provided by engineer. */
 "Done" = "完了";
@@ -824,6 +842,9 @@
 "Left" = "左";
 
 /* No comment provided by engineer. */
+"left-right only" = "左右のみ";
+
+/* No comment provided by engineer. */
 "Length" = "Length";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "配置：";
 
 /* No comment provided by engineer. */
+"Play" = "プレイ";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Phiro の光を設定";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "回転のスタイルを設定 ";
 
 /* No comment provided by engineer. */
 "Set size to" = "サイズ：";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "Welcome!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "What's your name?";
+
+/* No comment provided by engineer. */
 "When" = "場合";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "You have already downloaded this project!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "あなたのメール アドレスは無効なようです";
