--- a/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "동의";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "모든 블루투스 장치를 성공적으로 분리";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "그리고";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "그리고 대기";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "아두이노 블록";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "  ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "다음 크기로 바꾸기";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "투명도 바꾸기";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "변경 내용을 저장하시겠습니까";
+
+/* No comment provided by engineer. */
+"don't rotate" = "회전 정지";
 
 /* No comment provided by engineer. */
 "Done" = "완료";
@@ -824,6 +842,9 @@
 "Left" = "왼쪽";
 
 /* No comment provided by engineer. */
+"left-right only" = "왼쪽-오른쪽만";
+
+/* No comment provided by engineer. */
 "Length" = "길이";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "위치 설정";
 
 /* No comment provided by engineer. */
+"Play" = "실행";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Phiro에서 소리 실행 ";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Phiro 빛 정하기";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "회전 스타일 설정하기";
 
 /* No comment provided by engineer. */
 "Set size to" = "크기 설정하기";
@@ -1811,13 +1838,16 @@
 "Welcome!" = "환영합니다!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "당신의 이름이 무엇인가요?";
+
+/* No comment provided by engineer. */
 "When" = "언제";
 
 /* No comment provided by engineer. */
 "When background changes to" = "배경이 바뀔 때";
 
 /* No comment provided by engineer. */
-"When project starts" = "프로그램을 시작할 때";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "화면을 터치할 때";
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "이미 이 프로그램은 다운로드되었습니다!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "당신의 이메일은 유효하지 않습니다";
