--- a/src/Catty/Resources/Localization/sk.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sk.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "Súhlasím";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "and";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "a čakaj";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino bloky";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "at ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "Zmeniť veľkosť o";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "Zmeniť priehľadnosť ";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "Do you want to save the changes";
+
+/* No comment provided by engineer. */
+"don't rotate" = "neotáčať";
 
 /* No comment provided by engineer. */
 "Done" = "Hotovo";
@@ -824,6 +842,9 @@
 "Left" = "Vľavo";
 
 /* No comment provided by engineer. */
+"left-right only" = "zľava doprava";
+
+/* No comment provided by engineer. */
 "Length" = "Length";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "Umiestni na ";
 
 /* No comment provided by engineer. */
+"Play" = "Prehrať";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Set Phiro light";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "Nastav štýl otáčania ";
 
 /* No comment provided by engineer. */
 "Set size to" = "Nastaviť veľkosť na";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "Welcome!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "What's your name?";
+
+/* No comment provided by engineer. */
 "When" = "Keď";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "You have already downloaded this project!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Your email seems to be invalid";
