--- a/src/Catty/Resources/Localization/sr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sr.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "Прихватам";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "and";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "and store written answer in ";
+
+/* No comment provided by engineer. */
 "and wait" = "и чекај";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino екстензија";
+
+/* No comment provided by engineer. */
+"Ask " = "Ask ";
 
 /* No comment provided by engineer. */
 "at " = "at ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "Промени величину за";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Change to landscape";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Change to portrait";
 
 /* No comment provided by engineer. */
 "Change transparency " = "Change transparency ";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "Да ли желите да сачувате измене";
+
+/* No comment provided by engineer. */
+"don't rotate" = "не окрећи";
 
 /* No comment provided by engineer. */
 "Done" = "Готово";
@@ -824,6 +842,9 @@
 "Left" = "Лево";
 
 /* No comment provided by engineer. */
+"left-right only" = "само лево-десно";
+
+/* No comment provided by engineer. */
 "Length" = "Дужина";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "Place at ";
 
 /* No comment provided by engineer. */
+"Play" = "Репродукуј";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Set Phiro light";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "Изаберите стил ротације";
 
 /* No comment provided by engineer. */
 "Set size to" = "Set size to";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "Добродошли!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "What's your name?";
+
+/* No comment provided by engineer. */
 "When" = "Када";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "Већ сте преузели овај пројекат!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Your answer";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Ваша емаил адреса изгледа неважећа";
