--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "ตกลง";
 
 /* No comment provided by engineer. */
+"all around" = "all around";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "และ";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "และเก็บคำตอบเป็นลายลักษณ์อักษร";
+
+/* No comment provided by engineer. */
 "and wait" = "และรอ";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino extension";
+
+/* No comment provided by engineer. */
+"Ask " = "คำถาม";
 
 /* No comment provided by engineer. */
 "at " = "at ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "เปลี่ยนขนาดทีละ";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "เปลี่ยนเป็นแนวนอน";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "เปลี่ยนเป็นแนวตั้ง";
 
 /* No comment provided by engineer. */
 "Change transparency " = "เปลี่ยนความโปร่งใส";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "คุณต้องการจะบันทึกการเปลี่ยนแปลงนี้หรือไม่";
+
+/* No comment provided by engineer. */
+"don't rotate" = "อย่าหมุน";
 
 /* No comment provided by engineer. */
 "Done" = "เสร็จสิ้น";
@@ -824,6 +842,9 @@
 "Left" = "ซ้าย";
 
 /* No comment provided by engineer. */
+"left-right only" = "ซ้าย - ขวาเท่านั้น";
+
+/* No comment provided by engineer. */
 "Length" = "ความยาว";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "วางที่";
 
 /* No comment provided by engineer. */
+"Play" = "เล่น";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "ชุดไฟ Phiro";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "ตั้งค่ารูปแบบการหมุน";
 
 /* No comment provided by engineer. */
 "Set size to" = "ตั้งขนาดให้เป็น";
@@ -1811,13 +1838,16 @@
 "Welcome!" = "ยินดีต้อนรับ!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "คุณชื่ออะไร?";
+
+/* No comment provided by engineer. */
 "When" = "เมื่อ";
 
 /* No comment provided by engineer. */
 "When background changes to" = "When background changes to";
 
 /* No comment provided by engineer. */
-"When project starts" = "When project starts";
+"When project starts" = "เมื่อโครงการเริ่มต้น";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "เมื่อเวทีถูกทาบทาม";
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "You have already downloaded this project!";
+
+/* No comment provided by engineer. */
+"Your answer" = "คำตอบของคุณ";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "อีเมล์ของคุณดูเหมือนจะไม่ถูกต้อง";
