--- a/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Agree" = "Kabul ediyorum";
 
 /* No comment provided by engineer. */
+"all around" = "her yerde";
+
+/* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Tüm Bluetooth cihazların başarıyla bağlantısı kesildi";
 
 /* No comment provided by engineer. */
@@ -83,6 +86,9 @@
 "and" = "ve";
 
 /* No comment provided by engineer. */
+"and store written answer in " = "ve yazılı cevabı şurada saklayın ";
+
+/* No comment provided by engineer. */
 "and wait" = "ve bekleyin";
 
 /* No comment provided by engineer. */
@@ -105,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "Arduino extension" = "Arduino tuğlaları";
+
+/* No comment provided by engineer. */
+"Ask " = "Sor ";
 
 /* No comment provided by engineer. */
 "at " = "en ";
@@ -225,6 +234,12 @@
 
 /* No comment provided by engineer. */
 "Change size by" = "Boyutu buna göre değiştir";
+
+/* No comment provided by engineer. */
+"Change to landscape" = "Manzaraya geç";
+
+/* No comment provided by engineer. */
+"Change to portrait" = "Portreye geç";
 
 /* No comment provided by engineer. */
 "Change transparency " = "Şeffaflığı değiştir";
@@ -456,6 +471,9 @@
 
 /* paint */
 "Do you want to save the changes" = "Değişiklikleri kaydetmek istiyor musunuz";
+
+/* No comment provided by engineer. */
+"don't rotate" = "Döndürme";
 
 /* No comment provided by engineer. */
 "Done" = "Tamam";
@@ -824,6 +842,9 @@
 "Left" = "Sol";
 
 /* No comment provided by engineer. */
+"left-right only" = "sadece sağdan sola";
+
+/* No comment provided by engineer. */
 "Length" = "Uzunluk";
 
 /* No comment provided by engineer. */
@@ -1163,6 +1184,9 @@
 "Place at " = "Yerleştirin ";
 
 /* No comment provided by engineer. */
+"Play" = "Oynat";
+
+/* No comment provided by engineer. */
 "Play Phiro music\n" = "Phiro müzik çal\n";
 
 /* No comment provided by engineer. */
@@ -1449,6 +1473,9 @@
 
 /* No comment provided by engineer. */
 "Set Phiro light" = "Phiro ışığını ayarla";
+
+/* No comment provided by engineer. */
+"Set rotation style" = "Rotasyon stilini ayarla";
 
 /* No comment provided by engineer. */
 "Set size to" = "Boyutu buna değiştir";
@@ -1811,6 +1838,9 @@
 "Welcome!" = "Hoşgeldiniz!";
 
 /* No comment provided by engineer. */
+"What's your name?" = "Adınız ne?";
+
+/* No comment provided by engineer. */
 "When" = "Ne zaman";
 
 /* No comment provided by engineer. */
@@ -1851,6 +1881,9 @@
 
 /* No comment provided by engineer. */
 "You have already downloaded this project!" = "Bu projeyi zaten indirdiniz!";
+
+/* No comment provided by engineer. */
+"Your answer" = "Senin cevabın";
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "E-posta adresiniz geçersiz görünüyor";
